--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 			</div>
 		</div>
 		<div id="wrap2" class="clearfix">
-			<div class="EditPanelPC2">
+			<div class="EditPanelPC2_LeftSide">
 				<div class="EditPanel3">
 					<h3>経路案内</h3>
 					<div class="ShadowBox2">
@@ -98,13 +98,10 @@
 				</div>
 				<div class="EditPanel4">
 					<h3>色の変更</h3>
-					<select id="ColoredLayer_PC" name="ColoredLayer_PC" onchange="ColoredLayer_PC()">
+					<select id="ColoredLayer_PC" name="ColoredLayer_PC">
 						<option value="NotChoosed">-</option>
-						<option value="NowChoosedCountry">国名</option>
-						<option value="NowChoosedState">県名</option>
-						<option value="NowChoosedTownAndVillage">市町村名</option>
+						<option value="NowChoosedBackGround">背景の土地</option>
 						<option value="NowChoosedBuilding">建物、橋</option>
-						<option value="NowChoosedMountains">山</option>
 						<option value="NowChoosedWaters">川、湖、海</option>
 						<option value="NowChoosedHighway">国道、高速道路、バイパスなど</option>
 						<option value="NowChosedMinorRoads">その他道路、歩道など</option>
