--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 						<option value="NowChoosedHighway">国道、高速道路、バイパスなど</option>
 						<option value="NowChosedMinorRoads">その他道路、歩道など</option>
 					</select>
-					<div id="swatches"></div>
+					<div id="swatches_PC"></div>
 				</div>
 			</div>
 		</div>
@@ -183,6 +183,18 @@
 							<input type="range" id="Label-Size-Slider_SP" min="0" max="30" step="0.1">
 							<span id="current-value_SP"></span>
 						</div>
+					</div>
+					<div class="EditPanel4">
+						<h3>色の変更</h3>
+						<select id="ColoredLayer_SP" name="ColoredLayer_SP">
+							<option value="NotChoosed">-</option>
+							<option value="NowChoosedBackGround">背景の土地</option>
+							<option value="NowChoosedBuilding">建物、橋</option>
+							<option value="NowChoosedWaters">川、湖、海</option>
+							<option value="NowChoosedHighway">国道、高速道路、バイパスなど</option>
+							<option value="NowChosedMinorRoads">その他道路、歩道など</option>
+						</select>
+						<div id="swatches_SP"></div>
 					</div>
 				</div>
 			</ul>
