--- a/index_responsible.html
+++ b/index_responsible.html
@@ -93,7 +93,7 @@
 				<div class="EditPanel3">
 					<h3>経路案内</h3>
 					<div class="ShadowBox2">
-						<div id="Navigation_PC" class="Navigation"></div>
+						<div id="Navigation" class="Navigation"></div>
 					</div>
 				</div>
 				<div class="EditPanel4">
