--- a/index_background.html
+++ b/index_background.html
@@ -9,7 +9,7 @@
 	<link href="https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.css" rel="stylesheet" />
 	<script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.5.1/mapbox-gl-geocoder.min.js"></script>
 	<link href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.5.1/mapbox-gl-geocoder.css" rel="stylesheet" type="text/css"/>
-	<link href="css/style_background.css" rel="stylesheet" />
+	<link href="css/style.css" rel="stylesheet" />
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c&display=swap" rel="stylesheet">
 	<script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-directions/v4.1.0/mapbox-gl-directions.js"></script>
@@ -95,18 +95,20 @@
 				</div>
 				<div class="EditPanel2">
 					<h3>文字の大きさ調整</h3>
-					<select id="ChoosedLayer_PC" name="ChoosedLayer_PC" onchange="ChoosingLayer_PC()">
-						<option value="NotChoosed">-</option>
-						<option value="NowChoosedCountry">国名</option>
-						<option value="NowChoosedState">県名</option>
-						<option value="NowChoosedTownAndVillage">市町村名</option>
-						<option value="NowChoosedBuilding">建物、橋</option>
-						<option value="NowChoosedMountains">山</option>
-						<option value="NowChoosedWaters">川、湖、海</option>
-						<option value="NowChoosedHighway">国道、高速道路、バイパスなど</option>
-						<option value="NowChoosedMinorRoads">その他道路、歩道など</option>
-						<option value="NowChoosedTransit">公共交通機関（バス、電車）など</option>
-					</select>
+					<div class="selectdiv_PC">
+						<select id="ChoosedLayer_PC" name="ChoosedLayer_PC" onchange="ChoosingLayer_PC()">
+							<option value="NotChoosed">選択してください</option>
+							<option value="NowChoosedCountry">国名</option>
+							<option value="NowChoosedState">県名</option>
+							<option value="NowChoosedTownAndVillage">市町村名</option>
+							<option value="NowChoosedBuilding">建物、橋</option>
+							<option value="NowChoosedMountains">山</option>
+							<option value="NowChoosedWaters">川、湖、海</option>
+							<option value="NowChoosedHighway">国道、高速道路、バイパスなど</option>
+							<option value="NowChoosedMinorRoads">その他道路、歩道など</option>
+							<option value="NowChoosedTransit">公共交通機関（バス、電車）など</option>
+						</select>
+					</div>
 					<div class="SizeEditSlider">
 						<input type="range" id="Label-Size-Slider_PC" min="0" max="30" step="0.1">
 						<span id="current-value_PC"></span>
@@ -123,15 +125,17 @@
 					</div>
 				</div>
 				<div class="EditPanel4">
-					<h3>色の変更</h3>
-					<select id="ColoredLayer_PC" name="ColoredLayer_PC">
-						<option value="NotChoosed">-</option>
-						<option value="NowChoosedBackGround">背景の土地</option>
-						<option value="NowChoosedBuilding">建物、橋</option>
-						<option value="NowChoosedWaters">川、湖、海</option>
-						<option value="NowChoosedHighway">国道、高速道路、バイパスなど</option>
-						<option value="NowChosedMinorRoads">その他道路、歩道など</option>
-					</select>
+						<h3>色の変更</h3>
+						<div class="selectdiv_PC">
+							<select id="ColoredLayer_PC" name="ColoredLayer_PC">
+								<option value="NotChoosed">選択してください</option>
+								<option value="NowChoosedBackGround">背景の土地</option>
+								<option value="NowChoosedBuilding">建物、橋</option>
+								<option value="NowChoosedWaters">川、湖、海</option>
+								<option value="NowChoosedHighway">国道、高速道路、バイパスなど</option>
+								<option value="NowChosedMinorRoads">その他道路、歩道など</option>
+							</select>
+						</div>
 					<div id="swatches_PC"></div>
 				</div>
 			</div>
@@ -214,18 +218,20 @@
 					</div>
 					<div class="EditPanel2">
 						<h3>文字の大きさ調整</h3>
-						<select id="ChoosedLayer_SP" name="ChoosedLayer_SP" onchange="ChoosingLayer_SP()">
-							<option value="NotChoosed">-</option>
-							<option value="NowChoosedCountry">国名</option>
-							<option value="NowChoosedState">県名</option>
-							<option value="NowChoosedTownAndVillage">市町村名</option>
-							<option value="NowChoosedBuilding">建物、橋</option>
-							<option value="NowChoosedMountains">山</option>
-							<option value="NowChoosedWaters">川、湖、海</option>
-							<option value="NowChoosedHighway">国道、高速道路、バイパスなど</option>
-							<option value="NowChoosedMinorRoads">その他道路、歩道など</option>
-							<option value="NowChoosedTransit">公共交通機関（バス、電車）など</option>
-						</select>
+						<div class="selectdiv">
+							<select id="ChoosedLayer_SP" name="ChoosedLayer_SP" onchange="ChoosingLayer_SP()">
+								<option value="NotChoosed">選択してください</option>
+								<option value="NowChoosedCountry">国名</option>
+								<option value="NowChoosedState">県名</option>
+								<option value="NowChoosedTownAndVillage">市町村名</option>
+								<option value="NowChoosedBuilding">建物、橋</option>
+								<option value="NowChoosedMountains">山</option>
+								<option value="NowChoosedWaters">川、湖、海</option>
+								<option value="NowChoosedHighway">国道、高速道路、バイパスなど</option>
+								<option value="NowChoosedMinorRoads">その他道路、歩道など</option>
+								<option value="NowChoosedTransit">公共交通機関（バス、電車）など</option>
+							</select>
+						</div>
 						<div class="SizeEditSlider">
 							<input type="range" id="Label-Size-Slider_SP" min="0" max="30" step="0.1">
 							<span id="current-value_SP"></span>
@@ -233,14 +239,16 @@
 					</div>
 					<div class="EditPanel4">
 						<h3>色の変更</h3>
-						<select id="ColoredLayer_SP" name="ColoredLayer_SP">
-							<option value="NotChoosed">-</option>
-							<option value="NowChoosedBackGround">背景の土地</option>
-							<option value="NowChoosedBuilding">建物、橋</option>
-							<option value="NowChoosedWaters">川、湖、海</option>
-							<option value="NowChoosedHighway">国道、高速道路、バイパスなど</option>
-							<option value="NowChosedMinorRoads">その他道路、歩道など</option>
-						</select>
+						<div class="selectdiv">
+							<select id="ColoredLayer_SP" name="ColoredLayer_SP">
+								<option value="NotChoosed">選択してください</option>
+								<option value="NowChoosedBackGround">背景の土地</option>
+								<option value="NowChoosedBuilding">建物、橋</option>
+								<option value="NowChoosedWaters">川、湖、海</option>
+								<option value="NowChoosedHighway">国道、高速道路、バイパスなど</option>
+								<option value="NowChosedMinorRoads">その他道路、歩道など</option>
+							</select>
+						</div>
 						<div id="swatches_SP"></div>
 					</div>
 				</div>
@@ -248,7 +256,7 @@
 		</nav>
 		<div class="overlay"></div>
 
-	<script src='JavaScript/LowVisionMap_background.js'></script>
+	<script src='JavaScript/LowVisionMap.js'></script>
 
 
 
