--- a/index_background.html
+++ b/index_background.html
@@ -9,7 +9,7 @@
 	<link href="https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.css" rel="stylesheet" />
 	<script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.5.1/mapbox-gl-geocoder.min.js"></script>
 	<link href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.5.1/mapbox-gl-geocoder.css" rel="stylesheet" type="text/css"/>
-	<link href="css/style_responsible.css" rel="stylesheet" />
+	<link href="css/style_background.css" rel="stylesheet" />
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c&display=swap" rel="stylesheet">
 	<script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-directions/v4.1.0/mapbox-gl-directions.js"></script>
@@ -23,6 +23,8 @@
 			<div class="ShadowBox1">
 				<div id="map"></div>
 			</div>
+
+			
 			<div class="EditPanelPC1" class="clearfix">
 				<div class="EditPanel5" >
 					<h3>道路、線路の表示/非表示</h3>
@@ -111,7 +113,9 @@
 					</div>
 					<div class="SizeEditSlider">
 						<input type="range" id="Label-Size-Slider_PC" min="0" max="30" step="0.1">
-						<span id="current-value_PC"></span>
+						<span>文字の大きさ： </span>
+						<span id="current-value_PC"> - </span>
+						<span> px</span>
 					</div>
 				</div>
 			</div>
@@ -139,7 +143,16 @@
 					<div id="swatches_PC"></div>
 				</div>
 			</div>
-		</div>					
+			<div class="EditPanelPC2_RightSide">
+				<div class="EditPanel6">
+					<h3>検索ボックス</h3>
+					<div id="geocoder" class="geocoder"></div>
+				</div>
+			</div>
+		</div>	
+		
+
+
 	</main>
 
 
@@ -256,7 +269,7 @@
 		</nav>
 		<div class="overlay"></div>
 
-	<script src='JavaScript/LowVisionMap_responsible.js'></script>
+	<script src='JavaScript/LowVisionMap_.js'></script>
 
 
 
