--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<link href="https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.css" rel="stylesheet" />
 	<script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.5.1/mapbox-gl-geocoder.min.js"></script>
 	<link href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.5.1/mapbox-gl-geocoder.css" rel="stylesheet" type="text/css"/>
-	<link href="css/style.css" rel="stylesheet" />
+	<link href="css/style_responsible.css" rel="stylesheet" />
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c&display=swap" rel="stylesheet">
 	<script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-directions/v4.1.0/mapbox-gl-directions.js"></script>
@@ -143,12 +143,15 @@
 					<div id="swatches_PC"></div>
 				</div>
 			</div>
+
 			<div class="EditPanelPC2_RightSide">
 				<div class="EditPanel6">
 					<h3>検索ボックス</h3>
-					<div id="geocoder" class="geocoder"></div>
 				</div>
 			</div>
+
+			<div id="geocoder" class="geocoder"></div>
+
 		</div>	
 		
 
@@ -269,7 +272,7 @@
 		</nav>
 		<div class="overlay"></div>
 
-	<script src='JavaScript/LowVisionMap.js'></script>
+	<script src='JavaScript/LowVisionMap_responsible.js'></script>
 
 
 
