--- a/index_background.html
+++ b/index_background.html
@@ -9,7 +9,7 @@
 	<link href="https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.css" rel="stylesheet" />
 	<script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.5.1/mapbox-gl-geocoder.min.js"></script>
 	<link href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.5.1/mapbox-gl-geocoder.css" rel="stylesheet" type="text/css"/>
-	<link href="css/style_responsible.css" rel="stylesheet" />
+	<link href="css/style_responsible.css" rel="stylesheet" charset="utf-8"/>
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c&display=swap" rel="stylesheet">
 	<script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-directions/v4.1.0/mapbox-gl-directions.js"></script>
@@ -22,8 +22,6 @@
 			<div class="ShadowBox1">
 				<div id="map"></div>
 			</div>
-
-			
 			<div class="EditPanelPC1" class="clearfix">
 				<div class="EditPanel5" >
 					<h3>道路、線路の表示/非表示</h3>
@@ -142,7 +140,6 @@
 					<div id="swatches_PC"></div>
 				</div>
 			</div>
-
 			<div class="EditPanelPC2_RightSide">
 				<div class="EditPanel6">
 					<h3>検索ボックス</h3>
