--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 					</div>
 					<div class="SizeEditSlider">
 						<input type="range" id="Label-Size-Slider_SP" min="0" max="30" step="0.1">
-						<span>文字の大きさ： </span>
+						<span>文字の大きさ： </span><br>
 						<span id="current-value_SP"> - </span>
 						<span> px</span>
 					</div>
